3.5/about/disclaimer.md
---
layout: disclaimer_piwik
title: Impressum
description: "InGrid: Indexieren, Recherchieren, Visualisieren, Teilen"
sitemap: false
---

## Betreiber

Verwaltungskooperation Umweltinformationssysteme (VKoopUIS) Projekt Nr. 50: InGrid - Pflege und Weiterentwicklung der 
InGrid-Softwarekomponenten zum Betrieb von Internetportalen und Metadatenkatalogen<br>
E-Mail: vkoopuis@informationgrid.eu

Projektpartner Öffentliche Verwaltung:

- Niedersächsisches Ministerium für Umwelt, Energie und Klimaschutz
- Bundesanstalt für IT-Dienstleistungen
- Ministerium für Ländliche Entwicklung, Umwelt und Landwirtschaft Brandenburg
- GeoInformation Bremen
- Behörde für Stadtentwicklung und Umwelt Hamburg
- Landesamt für Umwelt, Naturschutz und Geologie Mecklenburg-Vorpommern
- Landesamt für Vermessung, Geoinformation und Landentwicklung Saarland
- Sächsisches Landesamt für Umwelt, Landwirtschaft und Geologie
- Ministerium für Landwirtschaft und Umwelt des Landes Sachsen-Anhalt

Projektpartner Wirtschaft:

wemove digital solutions GmbH<br>
Eschersheimer Landstr. 5-7<br>
D-60322 Frankfurt am Main<br>
Tel.: +49 69 759 003 - 0<br>
E-Mail: ingrid@wemove.com

Geschäftsführer: Joachim Müller und Stefan Hartmann

## Allgemeine inhaltliche Veranwortung / Haftung


### Inhalt des Onlineangebotes

Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der bereitgestellten Informationen. Haftungsansprüche gegen den Autor, die sich auf Schäden materieller oder ideeller Art beziehen, welche durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.

### Verweise und Links

Sofern auf Verweisziele ("Links") direkt oder indirekt verwiesen wird, die außerhalb des Verantwortungsbereiches des Autors liegen, haftet dieser nur dann, wenn er von den Inhalten Kenntnis hat und es ihm technisch möglich und zumutbar wäre, die Nutzung im Falle rechtswidriger Inhalte zu verhindern. Für darüber hinausgehende Inhalte und insbesondere für Schäden, die aus der Nutzung oder Nichtnutzung solcherart dargebotener Informationen entstehen, haftet allein der Anbieter dieser Seiten, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist. Diese Einschränkung gilt gleichermaßen auch für Fremdeinträge in vom Autor eingerichteten Gästebüchern, Diskussionsforen und Mailinglisten.

### Urheberrecht

Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Grafiken, Sounds und Texte zu beachten, von ihm selbst erstellte Grafiken, Sounds und Texte zu nutzen oder auf lizenzfreie Grafiken, Sounds und Texte zurückzugreifen. Sollte sich auf den jeweiligen Seiten dennoch eine ungekennzeichnete, aber durch fremdes Copyright geschützte Grafik, ein Sound oder Text befinden, so konnte das Copyright vom Autor nicht festgestellt werden. Im Falle einer solchen unbeabsichtigten Copyrightverletzung wird der Autor das entsprechende Objekt nach Benachrichtigung aus seiner Publikation entfernen bzw. mit dem entsprechenden Copyright kenntlich machen. Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Sounds oder Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.

### Rechtswirksamkeit dieses Haftungsausschlusses

Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem Inhalt und ihrer Gültigkeit davon unberührt.
 
### Datenschutz

Unserer Website verwendet Piwik, dabei handelt es sich um einen sogenannten Webanalysedienst. Piwik verwendet sog. “Cookies”, dass sind Textdateien, die auf Ihrem Computer gespeichert werden und die unsererseits eine Analyse der Benutzung der Webseite ermöglichen. Zu diesem Zweck werden die durch den Cookie erzeugten Nutzungsinformationen (einschließlich Ihrer gekürzten IP-Adresse) an unseren Server übertragen und zu Nutzungsanalysezwecken gespeichert, was der Webseitenoptimierung unsererseits dient. Ihre IP-Adresse wird bei diesem Vorgang umge­hend anony­mi­siert, so dass Sie als Nutzer für uns anonym bleiben. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Webseite werden nicht an Dritte weitergegeben. Sie können die Verwendung der Cookies durch eine entsprechende Einstellung Ihrer Browser Software verhindern, es kann jedoch sein, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich nutzen können.

Wenn Sie mit der Spei­che­rung und Aus­wer­tung die­ser Daten aus Ihrem Besuch nicht ein­ver­stan­den sind, dann kön­nen Sie der Spei­che­rung und Nut­zung nachfolgend per Maus­klick jederzeit wider­spre­chen. In diesem Fall wird in Ihrem Browser ein sog. Opt-Out-Cookie abgelegt, was zur Folge hat, dass Piwik kei­ner­lei Sit­zungs­da­ten erhebt. Achtung: Wenn Sie Ihre Cookies löschen, so hat dies zur Folge, dass auch das Opt-Out-Cookie gelöscht wird und ggf. von Ihnen erneut aktiviert werden muss.


Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.

